# ExcelMerger

./: .gitignore  .gitlab-ci.yml  LICENSE  LICENSE.md  README.en.md  README.md  README.zh.md  build-merger.py  jsconfig.json  merger.spec  package-lock.json  package.json  svelte.config.js  vite.config.js  wxglade.wxg  wxglade.wxg.bak
.github/: FUNDING.yml
app/: __main__.py  merger.py  wxglade_out.py
src/: app.html
src-python/: build-merger.py  pyproject.toml
src-python/src/: merger.py
src-python/tests/: workbook1.xlsx  workbook2.xlsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/routes/: index.svelte
