[tool.poetry]
name = "excel-combinator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
wxPython = "^4.1.1"
pywin32 = "^301"
xlwings = "^0.24.9"
pyinstaller = "^4.5.1"
Nuitka = "^0.6.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
