[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
Nuitka = "^2"
pyinstaller = "^6"
python = ">=3.10,<3.11"
pywin32 = "^306"
xlwings = "^0.31"

[tool.poetry.dev-dependencies]

[tool.pdm]
includes = []

[tool.pdm.dev-dependencies]
dev = []

[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517"]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
  {name = "Your Name", email = "you@example.com"},
]
dependencies = [
  "pywin32<304,>=302",
  "xlwings<1.0.0,>=0.25.3",
  "pyinstaller<5.0.0,>=4.5.1",
  "Nuitka<1.0.0,>=0.6.16",
]
description = ""
name = "excel-combinator"
requires-python = ">=3.10,<3.11"
version = "0.1.0"

[project.urls]
